fixed prodct alignment issue

--- a/src/pages/home Page/components/productsGrid/ProductGrid.css
+++ b/src/pages/home Page/components/productsGrid/ProductGrid.css
@@ -48,6 +48,7 @@
     font-size: 1em;
     font-weight: 400;
     margin-bottom: 5px;
+    text-align: justify;
   }
   
   .product-price {
